// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer should stay the same when a file is moved 1`] = `
"// BETTERER RESULTS V2.
exports[\`typescript use strict mode\`] = {
  value: \`{
    \\"src/index.ts:1499252024\\": [
      [2, 12, 1, \\"The left-hand side of an arithmetic operation must be of type \\\\'any\\\\', \\\\'number\\\\', \\\\'bigint\\\\' or an enum type.\\", \\"177604\\"]
    ]
  }\`
};
"
`;

exports[`betterer should stay the same when a file is moved 2`] = `
"// BETTERER RESULTS V2.
exports[\`typescript use strict mode\`] = {
  value: \`{
    \\"src/moved.ts:1499252024\\": [
      [2, 12, 1, \\"The left-hand side of an arithmetic operation must be of type \\\\'any\\\\', \\\\'number\\\\', \\\\'bigint\\\\' or an enum type.\\", \\"177604\\"]
    ]
  }\`
};
"
`;

exports[`betterer should stay the same when a file is moved 3`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"typescript use strict mode\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"typescript use strict mode\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked for the first time! 🎉",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"typescript use strict mode\\"!",
  " ☀️  betterer  warn  🚨  - ",
  "\\"typescript use strict mode\\" stayed the same. 😐",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  warn  🚨  - ",
  "1 test stayed the same. 😐",
]
`;

exports[`betterer should stay the same when an issue moves line 1`] = `
"// BETTERER RESULTS V2.
exports[\`typescript use strict mode\`] = {
  value: \`{
    \\"src/index.ts:1499252024\\": [
      [2, 12, 1, \\"The left-hand side of an arithmetic operation must be of type \\\\'any\\\\', \\\\'number\\\\', \\\\'bigint\\\\' or an enum type.\\", \\"177604\\"]
    ]
  }\`
};
"
`;

exports[`betterer should stay the same when an issue moves line 2`] = `
"// BETTERER RESULTS V2.
exports[\`typescript use strict mode\`] = {
  value: \`{
    \\"src/index.ts:2615232350\\": [
      [3, 12, 1, \\"The left-hand side of an arithmetic operation must be of type \\\\'any\\\\', \\\\'number\\\\', \\\\'bigint\\\\' or an enum type.\\", \\"177604\\"]
    ]
  }\`
};
"
`;

exports[`betterer should stay the same when an issue moves line 3`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"typescript use strict mode\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"typescript use strict mode\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked for the first time! 🎉",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"typescript use strict mode\\"!",
  " ☀️  betterer  warn  🚨  - ",
  "\\"typescript use strict mode\\" stayed the same. 😐",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  warn  🚨  - ",
  "1 test stayed the same. 😐",
]
`;

exports[`betterer should stay the same when multiple issue move line 1`] = `
"// BETTERER RESULTS V2.
exports[\`typescript use strict mode\`] = {
  value: \`{
    \\"src/index.ts:3120621594\\": [
      [2, 12, 1, \\"The left-hand side of an arithmetic operation must be of type \\\\'any\\\\', \\\\'number\\\\', \\\\'bigint\\\\' or an enum type.\\", \\"177604\\"],
      [3, 18, 1, \\"The right-hand side of an arithmetic operation must be of type \\\\'any\\\\', \\\\'number\\\\', \\\\'bigint\\\\' or an enum type.\\", \\"177604\\"]
    ]
  }\`
};
"
`;

exports[`betterer should stay the same when multiple issue move line 2`] = `
"// BETTERER RESULTS V2.
exports[\`typescript use strict mode\`] = {
  value: \`{
    \\"src/index.ts:435470967\\": [
      [4, 12, 1, \\"The left-hand side of an arithmetic operation must be of type \\\\'any\\\\', \\\\'number\\\\', \\\\'bigint\\\\' or an enum type.\\", \\"177604\\"],
      [5, 18, 1, \\"The right-hand side of an arithmetic operation must be of type \\\\'any\\\\', \\\\'number\\\\', \\\\'bigint\\\\' or an enum type.\\", \\"177604\\"]
    ]
  }\`
};
"
`;

exports[`betterer should stay the same when multiple issue move line 3`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"typescript use strict mode\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"typescript use strict mode\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked for the first time! 🎉",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"typescript use strict mode\\"!",
  " ☀️  betterer  warn  🚨  - ",
  "\\"typescript use strict mode\\" stayed the same. 😐",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  warn  🚨  - ",
  "1 test stayed the same. 😐",
]
`;

exports[`betterer should work when a test is the same 1`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"doesn't get bigger\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"doesn't get bigger\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "running \\"doesn't get smaller\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"doesn't get smaller\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "2 tests got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "2 tests got checked for the first time! 🎉",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"doesn't get bigger\\"!",
  " ☀️  betterer  warn  🚨  - ",
  "\\"doesn't get bigger\\" stayed the same. 😐",
  " ☀️  betterer  info  💬  - ",
  "running \\"doesn't get smaller\\"!",
  " ☀️  betterer  warn  🚨  - ",
  "\\"doesn't get smaller\\" stayed the same. 😐",
  " ☀️  betterer  info  💬  - ",
  "2 tests got checked. 🤔",
  " ☀️  betterer  warn  🚨  - ",
  "2 tests stayed the same. 😐",
]
`;

exports[`betterer should work when a test is the same 2`] = `
"// BETTERER RESULTS V2.
exports[\`doesn't get bigger\`] = {
  value: \`0\`
};

exports[\`doesn't get smaller\`] = {
  value: \`0\`
};
"
`;
